# sqlx-repository

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  codecov.yml  deny.toml  docker-compose.test.yml  docker-compose.yml
.github/workflows/: ci.yml
benches/: repository_crud.rs
crates/sqlx-repository/: Cargo.toml
crates/sqlx-repository-macros/: Cargo.toml
crates/sqlx-repository-macros/src/: lib.rs
crates/sqlx-repository/benches/: repository_crud.rs
crates/sqlx-repository/migrations/: 001_initial_schema.sql  002_test_data.sql  003_uuid_support.sql
crates/sqlx-repository/src/: error.rs  lib.rs  repository.rs  search.rs
crates/sqlx-repository/src/backends/: mod.rs  postgres.rs
crates/sqlx-repository/tests/: integration_tests.rs  macro_tests.rs  test_utils.rs  unit_tests.rs  uuid_tests.rs
crates/sqlx-repository/tests/macro_tests/compile_fail/: enum_not_supported.stderr  invalid_primary_key_type.rs  invalid_primary_key_type.stderr  missing_derives.rs  missing_derives.stderr  missing_primary_key.rs  missing_primary_key.stderr  soft_delete_without_deleted_at.rs  unsupported_field_type.rs  unsupported_field_type.stderr
crates/sqlx-repository/tests/unit/: backend_tests.rs  error_tests.rs  mod.rs  search_params_tests.rs
docs/: ERROR_GUIDE.md
docs/adr/: 001-phase-1-core-repository-pattern.md
examples/: basic_usage.rs  migrations.rs  soft_delete.rs  uuid_usage.rs
sqlx-repository-macros/: Cargo.toml
sqlx-repository-macros/src/: lib.rs
src/: error.rs  lib.rs  repository.rs  search.rs
src/backends/: mod.rs  postgres.rs
tests/: unit_tests.rs
tests/fixtures/: init_postgres.sql
tests/macro_tests/compile_fail/: enum_not_supported.rs  enum_not_supported.stderr  soft_delete_without_deleted_at.stderr
tests/macro_tests/compile_pass/: basic_repository.rs  pluralized_table_name.rs  soft_delete_repository.rs
tests/unit/: backend_tests.rs
